--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DISCORD_TOKEN=your_discord_bot_token_here
-ADMIN_IDS=1210291131301101618
-ADMIN_ROLE_ID=1376177459870961694
+DISCORD_TOKEN=MTQyNzk2Mjg5OTAxMTQ3MzUzMA.GEywXh.NnKVRRPMKarQz2b6hYn8_iqu2gIeQ45yJ-s4PQ
+ADMIN_IDS=1215548483658846221
+ADMIN_ROLE_ID=1430938737269014690
 DEFAULT_OS_IMAGE=ubuntu:22.04
 DOCKER_NETWORK=bridge
 MAX_CONTAINERS=100
